--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -7,3 +7,9 @@ spring:
 server:  port: 8001
 
 eureka:  client:    service-url:      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
