--- a/order-service-dev.yml
+++ b/order-service-dev.yml
@@ -23,3 +23,8 @@ management:
     web:
       exposure:
         include: hystrix.stream, refresh
+spring:
+  sleuth:
+    sampler:
+      probability: 0.1
+        
