--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -27,3 +27,12 @@ management:
     web:
       exposure:
         include: refresh
+spring:
+  sleuth:
+    sampler:
+      probability: 0.1
+spring:
+  sleuth:
+    sampler:
+      probability: 0.1
+        
