--- a/zuul-dev.yml
+++ b/zuul-dev.yml
@@ -43,3 +43,8 @@ management:
     web:
       exposure:
         include: hystrix.stream, refresh
+spring:
+  sleuth:
+    sampler:
+      probability: 0.1
+        
